akto-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: akto-envoy-filter
  namespace: default
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
    # you can use more sophisticated match conditions to apply akto envoy filter.
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
       name: envoy.filters.http.lua
       typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          defaultSourceCode:
            inlineString: |
              local cjson = require 'cjson'

              local friendlyHttpStatus={['200']='OK',['201']='Created',['202']='Accepted',['203']='Non-AuthoritativeInformation',['204']='NoContent',['205']='ResetContent',['206']='PartialContent',['300']='MultipleChoices',['301']='MovedPermanently',['302']='Found',['303']='SeeOther',['304']='NotModified',['305']='UseProxy',['306']='Unused',['307']='TemporaryRedirect',['400']='BadRequest',['401']='Unauthorized',['402']='PaymentRequired',['403']='Forbidden',['404']='NotFound',['405']='MethodNotAl [...]

              local function producer(message)
                  local config = require 'rdkafka.config'.create()
                  local kafkaServer = os.getenv("AKTO_KAFKA_IP")
                  -- you can add any kafka server here.
                  -- kafkaServer = '127.0.0.1:9092'
                  print("traffic : ", message)
                  if kafkaServer~=nil then
                      -- disable stats
                      config["statistics.interval.ms"] = "0"
                      config["bootstrap.servers"] = kafkaServer
                      config["batch.num.messages"] = "100"
                      config["queue.buffering.max.ms"] = "10000"

                      local producer = require 'rdkafka.producer'.create(config)
                      local topic_config = require 'rdkafka.topic_config'.create()
                      topic_config["auto.commit.enable"] = "true"

                      local topic = require 'rdkafka.topic'.create(producer, "akto.api.logs", topic_config)

                      local KAFKA_PARTITION_UA = -1
                      producer:produce(topic, KAFKA_PARTITION_UA, message)

                  end
              end

              local function lshift(x, by)
                  return x * 2 ^ by
              end

              function hash(str)
                  h = 5381;
                  for c in str:gmatch"." do
                      h = lshift(h, 5) + h + string.byte(c)
                      h = h%10000000000
                  end
                  h = h%10000000000
                  return h
              end

              
              local dataCap = os.getenv("AKTO_TRAFFIC_READ_LIMIT")
              if dataCap == nil then
                  -- cap the data sent to akto at 50mb/30s by default
                  dataCap = 50
              end

              -- any specific dataCap (mb/30sec)
              -- dataCap = 5
              dataCap = math.floor(dataCap * 1000000)

              local resmap = {}
              local lastReset = os.time()
              local dataSent = 0

              -- reset last sent data every 30 seconds.
              function updateLastReset()
                local current = os.time()
                if current - lastReset > 30 then
                  lastReset = current
                  dataSent = 0
                end
              end

              function envoy_on_request(request_handle)
                  if dataSent > dataCap then
                      return
                  end

                  local res = {}
                  local headers = request_handle:headers()
                  local headersMap = {}
                  for key, value in pairs(headers) do
                      headersMap[key] = value
                  end
                  res["requestHeaders"] = cjson.encode(headersMap)
                  local requestBody = ""
                  for chunk in request_handle:bodyChunks() do
                      if (chunk:length() > 0) then
                      requestBody = requestBody .. chunk:getBytes(0, chunk:length())
                      end
                  end
                  res["requestPayload"] = requestBody
                  local streamInfo = request_handle:streamInfo()
                  res["type"] = streamInfo:protocol()
                  res["path"] = request_handle:headers():get(":path")
                  res["method"] = request_handle:headers():get(":method")
                  res["ip"] = "0.0.0.0"
                  local address = request_handle:streamInfo():downstreamLocalAddress()
                  res["akto_vxlan_id"] = tostring(math.floor(hash(address)))
                  res["is_pending"] = "false"
                  res["source"] = "OTHER"
                  res["time"] = tostring(math.floor(tonumber(request_handle:timestampString())/1000))
                  res["akto_account_id"] = "1000000"
                  local key = tostring(math.random(10000))
                  request_handle:streamInfo():dynamicMetadata():set("envoy.filters.http.lua", "akto-key", key)
                  resmap[key] = res
              end
              
              function envoy_on_response(response_handle)
                  updateLastReset()
                  local temp = response_handle:streamInfo():dynamicMetadata():get("envoy.filters.http.lua")
                  if temp == nil then
                      return 
                  end
                  local key = temp["akto-key"]
                  if key == nil then 
                      return 
                  end
                  local res = resmap[key]
                  if res == nil then
                      return
                  end

                  local headers = response_handle:headers()
                  local headersMap = {}
                  for key, value in pairs(headers) do
                      headersMap[key] = value
                  end
                  res["responseHeaders"] = cjson.encode(headersMap)
                  local responseBody = ""
                  for chunk in response_handle:bodyChunks() do
                      if (chunk:length() > 0) then
                      responseBody = responseBody .. chunk:getBytes(0, chunk:length())
                      end
                  end
                  res["responsePayload"] = responseBody
                  res["statusCode"] = response_handle:headers():get(":status")
                  res["status"] = friendlyHttpStatus[response_handle:headers():get(":status")]
                  resmap[key] = nil
                  local messageEncoded = cjson.encode(res)
                  dataSent = dataSent + string.len(messageEncoded)
                  producer(messageEncoded)
              end
